test/expected/explain_fasv_v.out
explain void f(int x[static *])
                            ^
29: syntax error: "*": ']' expected
